fix z-index of map popup/filter panel

--- a/app/frontend/src/components/panel/panel.scss
+++ b/app/frontend/src/components/panel/panel.scss
@@ -41,7 +41,7 @@
           position: fixed;
           right: 5px;
           top: 5px;
-          z-index: 1000;
+          z-index: 5000;
         }
       }
 
